# tsql

./: .gitignore  .mise.toml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  docker-compose.yml  graph.md  justfile  knowledge.aaak
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeql.yml  release.yml  security.yml
Vault/Journal/: 2026-05-03.md
Vault/Spec/: 0.1.0.md
crates/tsql-app/: Cargo.toml
crates/tsql-app/src/: main.rs
crates/tsql-core/: Cargo.toml
crates/tsql-core/src/: lib.rs
crates/tsql-db/: Cargo.toml
crates/tsql-db/src/: lib.rs
crates/tsql-db/tests/: postgres.rs  sqlite.rs
crates/tsql-sql/: Cargo.toml
crates/tsql-sql/src/: lib.rs
crates/tsql-tui/: Cargo.toml
crates/tsql-tui/src/: editor.rs  lib.rs
crates/tsqlx-app/: Cargo.toml
crates/tsqlx-app/src/: main.rs
crates/tsqlx-core/: Cargo.toml
crates/tsqlx-core/src/: lib.rs
crates/tsqlx-db/: Cargo.toml
crates/tsqlx-db/src/: lib.rs  mssql.rs  oracle.rs
crates/tsqlx-db/tests/: mssql.rs  oracle.rs  postgres.rs  sqlite.rs
crates/tsqlx-sql/: Cargo.toml
crates/tsqlx-sql/src/: complete.rs  format.rs  highlight.rs  lib.rs
crates/tsqlx-tui/: Cargo.toml
crates/tsqlx-tui/src/: editor.rs  export.rs  lib.rs  undo.rs  vim.rs
crates/tsqlx-tui/src/erd/: canvas.rs  layout.rs  mod.rs  mouse.rs  primitives.rs  viewport.rs
docs/: STATUS.md  branch-protection.md
examples/: query.sql  tsql.toml
seed/: 01_schema.sql  02_data.sql
seed/mysql/: 01_schema.sql
