[workspace]
members = [
    "crates/tsql-app",
    "crates/tsql-core",
    "crates/tsql-db",
    "crates/tsql-sql",
    "crates/tsql-tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["nt2311"]
repository = "https://github.com/nt2311-vn/tsql"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "deny"

[workspace.dependencies]
anyhow = "1.0"
dirs = "6.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dirs = "5"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "sqlite"] }
thiserror = "2.0"
tokio = { version = "1.43", features = ["fs", "io-std", "macros", "rt-multi-thread"] }
toml = "0.8"
