[workspace]
members = [
    "crates/tsqlx-app",
    "crates/tsqlx-core",
    "crates/tsqlx-db",
    "crates/tsqlx-sql",
    "crates/tsqlx-tui",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
rust-version = "1.85"
authors = ["nt2311"]
repository = "https://github.com/nt2311-vn/tsqlx"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "deny"

[workspace.dependencies]
anyhow = "1.0"
dirs = "6.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "sqlite", "mysql", "chrono", "bigdecimal", "uuid", "json"] }
tiberius = { version = "0.12", default-features = false, features = ["native-tls", "tds73", "chrono", "sql-browser-tokio"] }
bb8 = "0.9"
bb8-tiberius = { version = "0.16", default-features = false, features = ["with-tokio", "chrono"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
thiserror = "2.0"
tokio = { version = "1.43", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread"] }
toml = "1"
toml_edit = "0.22"
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }
tempfile = "3.10"
