[package]
name = "tsql-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Core domain types for TSQL."
readme = "../../README.md"
keywords = ["sql", "database", "terminal", "tui"]
categories = ["command-line-utilities", "database"]

[dependencies]
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true

[lints]
workspace = true
