[package]
name = "tsql-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Database driver boundaries for TSQL."
readme = "../../README.md"
keywords = ["sql", "database", "terminal", "tui"]
categories = ["command-line-utilities", "database"]

[dependencies]
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tsql-core = { path = "../tsql-core", version = "0.1.0" }
tsql-sql = { path = "../tsql-sql", version = "0.1.0" }

[lints]
workspace = true
