[package]
name = "tsql-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Terminal UI and theme boundaries for TSQL."
readme = "../../README.md"
keywords = ["sql", "database", "terminal", "tui"]
categories = ["command-line-utilities", "database"]

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
ratatui.workspace = true
tsql-core = { path = "../tsql-core", version = "0.1.0" }
tsql-db = { path = "../tsql-db", version = "0.1.0" }
tsql-sql = { path = "../tsql-sql", version = "0.1.0" }

[lints]
workspace = true
