[package]
name = "tsqlx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "A Rust terminal database client focused on reliable SQL editing."
readme = "../../README.md"
keywords = ["sql", "database", "terminal", "tui"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "tsqlx"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tsqlx-core = { path = "../tsqlx-core", version = "0.3.0" }
tsqlx-db = { path = "../tsqlx-db", version = "0.3.0" }
tsqlx-sql = { path = "../tsqlx-sql", version = "0.3.0" }
tsqlx-tui = { path = "../tsqlx-tui", version = "0.3.0" }

[features]
default = []
oracle = ["tsqlx-db/oracle"]

[lints]
workspace = true
