[package]
name = "tsqlx-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Database driver boundaries for TSQL."
readme = "../../README.md"
keywords = ["sql", "database", "terminal", "tui"]
categories = ["command-line-utilities", "database"]

[dependencies]
sqlx.workspace = true
tiberius.workspace = true
bb8.workspace = true
bb8-tiberius.workspace = true
futures-util.workspace = true
thiserror.workspace = true
tokio.workspace = true
oracle = { version = "0.6", optional = true }
tsqlx-core = { path = "../tsqlx-core", version = "0.4.1" }
tsqlx-sql = { path = "../tsqlx-sql", version = "0.4.1" }

[features]
default = []
oracle = ["dep:oracle"]

[lints]
workspace = true
