[package]
name = "tsqlx-sql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "SQL document and parsing boundaries for TSQL."
readme = "../../README.md"
keywords = ["sql", "database", "terminal", "tui"]
categories = ["command-line-utilities", "database"]

[dependencies]
sqlparser.workspace = true
sqlformat.workspace = true

[lints]
workspace = true
