[package]
name = "tsqlx-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Terminal UI and theme boundaries for TSQL."
readme = "../../README.md"
keywords = ["sql", "database", "terminal", "tui"]
categories = ["command-line-utilities", "database"]

[dependencies]
arboard.workspace = true
anyhow.workspace = true
crossterm.workspace = true
dirs.workspace = true
ratatui.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "sync", "rt", "time"] }
tsqlx-core = { path = "../tsqlx-core", version = "0.4.1" }
tsqlx-db = { path = "../tsqlx-db", version = "0.4.1" }
tsqlx-sql = { path = "../tsqlx-sql", version = "0.4.1" }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt-multi-thread"] }

[lints]
workspace = true
